Removed searchResult, "sublistInclusive" method, got rid from ability to search elements in unsorted list, rewrote tests